Migrate tests away from Optional.get()
Upgraded modernizer plugin is flagging these violations, migrate to
alternatives.

Change-Id: I4f99b5cd6910819b8b50deda35d1b97445ecde2d
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>